# sdk-nrf

./: .gitignore  west.yml
applications/asset_tracker_v2/src/modules/: modem_module.c
applications/serial_lte_modem/doc/: CARRIER_AT_commands.rst
applications/serial_lte_modem/src/lwm2m_carrier/: Kconfig  slm_at_carrier.c
boards/nordic/nrf54ls05dk/: nrf54ls05_a_b_cpuapp_common.dtsi
doc/nrf/: known_issues.rst  links.txt
doc/nrf/releases_and_maturity/releases/: release-notes-changelog.rst
samples/cellular/lwm2m_carrier/src/: main.c
samples/nrf9160/lte_ble_gateway/: Kconfig  README.rst  prj.conf
samples/nrf9160/lte_ble_gateway/src/: alarm.c  alarm.h  ble.c  main.c
samples/nrf9160/lwm2m_demo/: CMakeLists.txt  Kconfig  README.rst  overlay-bootstrap.conf  overlay-nrf9160dk.conf  overlay-sensor_module.conf  overlay-thingy91.conf  prj.conf  sample.yaml  workspace.code-workspace
samples/nrf9160/lwm2m_demo/src/: config.h  main.c
samples/nrf9160/lwm2m_demo/src/events/: CMakeLists.txt  accel_event.c  app_gps_event.c  button_event.c  measurement_event.c  sensor_event.c  ui_input_event.c
samples/nrf9160/lwm2m_demo/src/ipso/: CMakeLists.txt  Kconfig  Kconfig.buzzer  Kconfig.ipso_buzzer  Kconfig.ipso_colour_sensor  (+5 more)
samples/nrf_rpc/protocols_serialization/client/: sample.yaml
samples/nrf_rpc/protocols_serialization/server/: sample.yaml
scripts/: quarantine_zephyr.yaml
subsys/nrf_security/include/psa/: crypto_driver_contexts_composites.h  crypto_driver_contexts_primitives.h
subsys/nrf_security/src/: psa_crypto_driver_wrappers.c
subsys/nrf_security/src/drivers/: CMakeLists.txt
subsys/nrf_security/src/drivers/fancy_new_cc3xx_includes/: cc3xx_aes_external_key_loader.h  cc3xx_config.h  fatal_error.h
subsys/nrf_security/src/drivers/nrf_cc3xx/: Kconfig
sysbuild/: CMakeLists.txt
(+85 files in other folders)
